@@ -44,6 +44,8 @@ Utilities
 
 .. autofunction:: progressbar
 
+.. autofunction:: clear
+
 .. autofunction:: format_filename
 
 .. autofunction:: get_terminal_size
